--- a/package.json
+++ b/package.json
@@ -1,17 +1,41 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^3.12.0",
+    "@google/generative-ai": "^0.21.0",
+    "@nuxt/eslint": "^0.7.4",
+    "@nuxtjs/mdc": "^0.11.1",
+    "@pinia/nuxt": "^0.9.0",
+    "@tiptap/extension-placeholder": "^2.10.4",
+    "@tiptap/extension-underline": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
+    "@tiptap/vue-3": "^2.10.4",
+    "@types/diff-match-patch": "^1.0.36",
+    "diff-match-patch": "^1.0.5",
+    "diff-match-patch-es": "^0.1.1",
+    "eslint-plugin-format": "^0.1.3",
+    "fast-xml-parser": "^4.5.1",
+    "json5": "^2.2.3",
+    "pinia": "^2.3.0",
+    "safe-eval": "^0.4.1",
+    "tailwind-variants": "^0.3.0",
+    "zod": "^3.24.1",
+    "zod-validation-error": "^3.4.0"
   }
 }
