--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "build": "bun --bun nuxt build",
+    "dev": "bun --bun nuxt dev",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "vue-tsc --noEmit"
+    "typecheck": "vue-tsc --noEmit",
+    "seed": "bun prisma/seed.ts",
+    "prisma:generate": "bunx prisma generate",
+    "migrate:dev": "bunx prisma migrate dev --preview-feature",
+    "migrate:dev:create": "bunx prisma migrate dev --create-only --preview-feature",
+    "migrate:reset": "bunx prisma migrate reset --preview-feature",
+    "migrate:deploy": "bunx prisma migrate deploy --preview-feature",
+    "migrate:status": "bunx prisma migrate status --preview-feature",
+    "migrate:resolve": "bunx prisma migrate resolve --preview-feature",
+    "prisma:studio": "bunx prisma studio"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.0.0-alpha.10",
+    "@prisma/client": "^6.1.0",
     "nuxt": "^3.14.1592",
+    "nuxt-auth-utils": "^0.5.7",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -22,12 +32,14 @@
     "@nuxt/eslint": "^0.7.4",
     "@nuxtjs/mdc": "^0.11.1",
     "@pinia/nuxt": "^0.9.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@tiptap/extension-placeholder": "^2.10.4",
     "@tiptap/extension-underline": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
     "@tiptap/vue-3": "^2.10.4",
-    "@types/diff-match-patch": "^1.0.36",
-    "diff-match-patch": "^1.0.5",
+    "@types/bun": "^1.1.14",
+    "@vueuse/core": "^12.2.0",
+    "bun": "^1.1.42",
     "diff-match-patch-es": "^0.1.1",
     "eslint-plugin-format": "^0.1.3",
     "fast-xml-parser": "^4.5.1",
