--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
     "seed": "bun prisma/seed.ts",
-    "prisma:generate": "bunx prisma generate",
+    "prisma:generate": "bunx prisma generate --no-engine",
     "migrate:dev": "bunx prisma migrate dev --preview-feature",
     "migrate:dev:create": "bunx prisma migrate dev --create-only --preview-feature",
     "migrate:reset": "bunx prisma migrate reset --preview-feature",
@@ -32,6 +32,7 @@
     "@nuxt/eslint": "^0.7.4",
     "@nuxtjs/mdc": "^0.11.1",
     "@pinia/nuxt": "^0.9.0",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "@tiptap/extension-placeholder": "^2.10.4",
     "@tiptap/extension-underline": "^2.10.4",
@@ -40,6 +41,7 @@
     "@types/bun": "^1.1.14",
     "@vueuse/core": "^12.2.0",
     "bun": "^1.1.42",
+    "date-fns": "^4.1.0",
     "diff-match-patch-es": "^0.1.1",
     "eslint-plugin-format": "^0.1.3",
     "fast-xml-parser": "^4.5.1",
