--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "bun --bun nuxt build",
+    "build": "bunx prisma generate && bun --bun nuxt build",
     "dev": "bun --bun nuxt dev",
     "preview": "nuxt preview",
     "lint": "eslint .",
