--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "check": "bun run build && node --env-file=.env .output/server/index.mjs"
   },
   "dependencies": {
+    "@nuxt/content": "^3.0.0",
     "@nuxt/ui": "^3.0.0-alpha.10",
     "@prisma/client": "^6.1.0",
     "nuxt": "^3.14.1592",
