--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "migrate:status": "bunx prisma migrate status --preview-feature",
     "migrate:resolve": "bunx prisma migrate resolve --preview-feature",
     "prisma:studio": "bunx prisma studio",
-    "check": "bun run build && node --env-file=.env .output/server/index.mjs"
+    "check": "bun run build && node --env-file=.env .output/server/index.mjs",
+    "release": "changelogen --release"
   },
   "dependencies": {
     "@nuxt/content": "^3.0.0",
     "@nuxt/ui": "^3.0.0-alpha.10",
     "@prisma/client": "^6.1.0",
+    "changelogen": "^0.5.7",
     "nuxt": "^3.14.1592",
     "nuxt-auth-utils": "^0.5.7",
     "vue": "latest",
@@ -53,5 +55,6 @@
     "tailwind-variants": "^0.3.0",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
-  }
+  },
+  "version": "0.0.1"
 }
